tests/getNextKeyFrame.out
Fatal error: failed to convert frame to gd image in /src/ffmpeg-php-code/ffmpeg-php/tests/getNextKeyFrame.php on line 8